# C3-AdventureGPT

./: .replit  LICENSE  README.md  app.py  pyproject.toml
flaskAdventure/: AdventureGptBE.py  __init__.py  game.py
flaskAdventure/templates/: base.html
flaskAdventure/templates/game/: index.html  next.html
